--- a/opportunities-server/src/main/resources/application.properties
+++ b/opportunities-server/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.jpa.show-sql=true
 #H2 settings
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+#comma seperated list of allowed origins
+app.allowed-origins=http://localhost:9000,http://localhost:4200
