--- a/opportunities-server/src/main/resources/application.properties
+++ b/opportunities-server/src/main/resources/application.properties
@@ -9,3 +9,8 @@ spring.h2.console.path=/h2-console
 
 #comma seperated list of allowed origins
 app.allowed-origins=http://localhost:9000,http://localhost:4200
+
+#Logging
+logging.level.org.springframework=INFO 
+logging.level.com.accolite.opportunities=INFO
+logging.file.name=logs/accolite-opportunities.log
